--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@ http://zarabotat-na-sajte.ru/</a> - за что я ему благодарен.
 			       });
  
 </script>
+	
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyC2KwZ2L14GTzTn5BdI2z8kKioPNj1UYzw",
+    authDomain: "testvapidkeys.firebaseapp.com",
+    projectId: "testvapidkeys",
+    storageBucket: "testvapidkeys.appspot.com",
+    messagingSenderId: "8001121591",
+    appId: "1:8001121591:web:edb2ca0224a75ce78ebeb2"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
 </body>
 </html>
