--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ http://zarabotat-na-sajte.ru/</a> - за что я ему благодарен.
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-	<script src="https://www.gstatic.com/firebasejs/8.2.9firebase-messaging.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script>
 
 <script>
   // Your web app's Firebase configuration
