--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@ console.log(currentToken);
 </script>
 	
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script> -->
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script>
+<!-- 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script> -->
 
-<script>
+<!-- <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
   apiKey: "AIzaSyC2KwZ2L14GTzTn5BdI2z8kKioPNj1UYzw",
@@ -100,7 +100,8 @@ console.log(currentToken);
 };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-</script>
+</script> -->
+	<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXw0MA.." ></script>
 
 </body>
 </html>
