--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ console.log(currentToken);
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-	<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXw0MA.." ></script>
+<!-- 	<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXw0MA.." ></script> -->
 
 </body>
 </html>
