--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	
         <title>Главная страница - страница обо мне 2</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script>
 	
 </head>
 <body>
