--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	
         <title>Главная страница - страница обо мне 2</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<!-- 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script> -->
-<!--  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script> -->
+	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script>
 	
 </head>
 <body>
@@ -18,7 +18,7 @@
 
 Поскольку я люблю авиацию, то хотел бы поделиться несколькими интересными 
 фотографиями на эту тему
-	<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXwyNg.." ></script>
+<!-- 	<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXwyNg.." ></script> -->
 <br/><br/>
 <br/><br/>
 <font style="color:green">Этот текст зеленый</font>
@@ -94,7 +94,7 @@ console.log(currentToken);
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <!-- 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script> -->
 
-<!-- <script>
+<script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
   apiKey: "AIzaSyC2KwZ2L14GTzTn5BdI2z8kKioPNj1UYzw",
@@ -106,7 +106,7 @@ console.log(currentToken);
 };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-</script> -->
+</script>
 <!-- 	<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXw0MA.." ></script> -->
 
 </body>
