--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	
         <title>Главная страница - страница обо мне 2</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script>
+<!-- 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script> -->
+<!--  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-messaging.js"></script> -->
+	<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-messaging.js"></script>
 	
 </head>
 <body>
@@ -102,7 +104,7 @@ console.log(currentToken);
   projectId: "testvapidkeys",
   storageBucket: "testvapidkeys.appspot.com",
   messagingSenderId: "8001121591",
-  appId: "1:8001121591:web:24eda0f4cea235138ebeb2"
+//   appId: "1:8001121591:web:24eda0f4cea235138ebeb2"
 };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
