--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ http://zarabotat-na-sajte.ru/</a> - за что я ему благодарен.
 
 <script>
 	$("#init_sub").click(function(){
+		console.log("|||||")
 			      	try {
      var akPush = new AKPush();
      akPush.initSubscription(); // Show push subscribe browser popup
