--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 Поскольку я люблю авиацию, то хотел бы поделиться несколькими интересными 
 фотографиями на эту тему
-<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXw3NQ.." ></script>
+<script src="https://pxl.egor-bronin.dev.altkraft.com/ak_container.js?id=MXwyNg.." ></script>
 <br/><br/>
 <br/><br/>
 <font style="color:green">Этот текст зеленый</font>
